correcciones y pruebas. empezando a probar extracción de ficha de película.